fix(generator): ConGen - improve help, fix multi-template bugs (#1772)
* fix(generator): fix multi-template bugs, improve help

* fix(generator): fix multi-template bugs, improve help

* remove redundant null check