@@ -86,7 +86,7 @@ public class OpenApiOutboundTemplateGenerator
     if (templates.isEmpty()) {
       throw new IllegalArgumentException("No operations found in OpenAPI document");
     }
-    var template = templates.get(0);
+    var template = templates.getFirst();
     return new ScanResult(
         template.id(),
         template.name(),
@@ -152,7 +152,11 @@ public class OpenApiOutboundTemplateGenerator
         .ifPresent(
             t -> {
               throw new IllegalArgumentException(
-                  String.format("Unsupported element type '%s'", t.elementType().getName()));
+                  String.format("Unsupported element type '%s'", t.elementType().getName())
+                      + " for OpenAPI generator. Supported element types: "
+                      + SUPPORTED_ELEMENT_TYPES.stream()
+                          .map(BpmnType::getName)
+                          .collect(Collectors.joining(", ")));
             });
     if (elementTypes.isEmpty()) {
       elementTypes = Set.of(DEFAULT_ELEMENT_TYPE);
@@ -203,7 +207,7 @@ public class OpenApiOutboundTemplateGenerator
     // otherwise we transform characters to their ascii value and sum them up
 
     String onlyNumbers = openAPIDocVersion.replaceAll("[^0-9]", "");
-    if (onlyNumbers.length() > 0) {
+    if (!onlyNumbers.isEmpty()) {
       return Integer.parseInt(onlyNumbers);
     } else {
       return openAPIDocVersion.chars().sum();
